Fixed nav overlap

--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,11 @@ nav{
         margin-right: 0%;
         width: 100%;
     }
+    .u-section-1 .u-shape-1 {
+        height: 50vh !important;
+        margin-bottom: 0;
+        margin-top: 0;
+    }
 }
 
 @media (max-width: 575px){
